step 4 complete. contacts added

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,7 +1,7 @@
-<h1>Welcome to <%= @crm_app_name %></h1>
-<p>Main menu</p>
+<h1>All Contacts</h1>
+
 <ul>
-  <li><a href="/contacts/new">Add a new contact</a></li>
-  <!-- please complete me with links to other actions -->
-  
+<% @contacts.each do |contact| %>
+  <li><%= contact.first_name %> <%= contact.last_name %></li>
+<% end %>
 </ul>
