added some css styling

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+  	 <link rel="stylesheet" type="text/css" href="/stylesheet.css">
   </head>
   <body>
-    <%= @crm_app_name %>
-    <%=	@crm_current_time %>
+    <%= yield %>
   </body>
 </html>
 
