--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,9 +1,9 @@
 <h1>Create new Contact</h1>
 
 <form action="/contacts" method="post">
-  First Name: <input type="text" name="first_name">
-  Last Name: <input type="text" name="last_name">
-  Email: <input type="text" name="email">
-  Note: <input type="text" name="note">
+  <strong>First Name:</strong> <input type="text" name="first_name">
+  <strong>Last Name:</strong> <input type="text" name="last_name">
+  <strong>Email:</strong> <input type="text" name="email">
+  <strong>Note:</strong> <input type="text" name="note">
   <input type="submit" name="Submit">
 </form>
