--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,5 @@
-<h1>Welcome to <%= @crm_app_name %> on <%= @crm_current_time %></h1>
-<p>Main menu</p>
-<ul>
-  <li><a href="/contacts">View all contacts</a></li>
-  <li><a href="/contacts/new">Create a new contact</a></li>
-  <!-- please complete me with links to other actions -->
-  
-</ul>
+<body>
+Welcome to myCRM. The Customer Relationship Manager.
+
+Please use the Navigation Bar above to perform an operation.
+</body>
