--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,10 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	 <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+  	 <link rel="stylesheet" type="text/css" href="/bootstrap.min.css">
+   	 <link rel="stylesheet" type="text/css" href="/stylesheet.css">
+   	 <script src="/jquery.min.js"></script>
+   	 <script src="/bootstrap.min.js"></script>
+
   </head>
-  <body>
-    <%= yield %>
+	<body>
+
+		<nav class="navbar navbar-default">
+		  <div class="container-fluid">
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+				  <a class="navbar-brand" href="../">myCRM</a>
+		    </div>
+
+		    <!-- Collect the nav links, forms, and other content for toggling -->
+		    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+		      <ul class="nav navbar-nav">
+		      	<li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacts <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		          	<li><a href="/contacts/search">Search</a></li>
+		            <li class="divider"></li>
+		            <li><a href="/contacts/new">Add</a></li>
+		            <li><a href="/contacts/delete">Delete</a></li>
+		            <li><a href="/contacts/modify">Modify</a></li>
+		            <li class="divider"></li>
+		            <li><a href="/contacts">Display All</a></li>
+		          </ul>
+		        </li>
+		        <li class="dropdown">
+		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Inventory <span class="caret"></span></a>
+		          <ul class="dropdown-menu" role="menu">
+		          	<li><a href="/inventory/search">Search</a></li>
+		            <li class="divider"></li>
+		            <li><a href="/inventory/new">Add</a></li>
+		            <li><a href="/inventory/delete">Delete</a></li>
+		            <li><a href="/inventory/modify">Modify</a></li>
+		            <li class="divider"></li>
+		            <li><a href="/inventory">Display All</a></li>
+		          </ul>
+		        </li>
+
+				  	<li><a href="/contacts/help">Help</a></li>
+		        
+		      </ul>
+		      
+		    </div><!-- /.navbar-collapse -->
+		  </div><!-- /.container-fluid -->
+		</nav>
+
+	  <%= yield %>
   </body>
 </html>
 
+	
