completed header, footer, body

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -59,6 +59,11 @@
 		</nav>
 
 	  <%= yield %>
+	   <div class="container">
+        </div>
+        <footer class="footer">
+        Brought to you by Imran Khakoo
+        </footer>
   </body>
 </html>
 
