--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -13,3 +13,20 @@ body {
 	background-color: #cccccc; 
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+body {
+  margin-bottom: 60px;
+}
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  background-color: #DCDCDC;
+  font-family: sans-serif, serif;
+  font-size: 16px;
+}
+
