--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -25,7 +25,7 @@ body {
   bottom: 0;
   width: 100%;
   height: 60px;
-  background-color: #DCDCDC;
+  background-image: url("dark_embroidery.png");
   font-family: sans-serif, serif;
   font-size: 16px;
 }
