added submit button to new contact form

--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -27,5 +27,11 @@
             <input type="text" class="form-control" id="note" placeholder="Notes" maxlength="30"></input>
         </div>
     </div>
+    <div class="form-group">
+        <label for="submit" class="col-sm-2 control-label"></label>
+        <div class="col-sm-2">
+            <input type="submit" class="form-control" id="submit" placeholder="Submit" maxlength="30"></input>
+        </div>
+    </div>
 </form>
 </div>
