--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -1,16 +1,17 @@
-<h1>CREATE A NEW CONTACT</h1>
 <div class="page-header">
   </div>
+  <fieldset>
+    <legend>Create a New Contact</legend>
     <div class="container nopadding">
       <form class="form-horizontal" role="form">
         <div class="form-group">
-        <label for="firstName" class="col-sm-2 control-label">First Name:</label>
+        <label for="first_name" class="col-sm-2 control-label">First Name:</label>
         <div class="col-sm-2">
             <input type="text" class="form-control" id="first_name" placeholder="First Name"></input>
         </div>
     		</div>
     		<div class="form-group">
-        <label for="lastName" class="col-sm-2 control-label">Last Name:</label>
+        <label for="last_name" class="col-sm-2 control-label">Last Name:</label>
         <div class="col-sm-2">
             <input type="text" class="form-control" id="last_name" placeholder="Last Name"></input>
         </div>
@@ -22,7 +23,7 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="notes" class="col-sm-2 control-label">Notes:</label>
+        <label for="note" class="col-sm-2 control-label">Notes:</label>
         <div class="col-sm-2">
             <input type="text" class="form-control" id="note" placeholder="Notes" maxlength="30"></input>
         </div>
@@ -33,5 +34,6 @@
             <input type="submit" class="form-control" id="submit" placeholder="Submit" maxlength="30"></input>
         </div>
     </div>
+    </fieldset>
 </form>
 </div>
