--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -2,7 +2,7 @@
   </div>
   <fieldset>
     <legend>Create a New Contact</legend>
-    <div class="container nopadding">
+    <div class="well" id="contact-well">
       <form class="form-horizontal" role="form" action="/contacts/new" method="POST">
         <div class="form-group">
         <label for="first_name" class="col-sm-2 control-label">First Name:</label>
