--- a/views/edit_contact.erb
+++ b/views/edit_contact.erb
@@ -1,10 +1,40 @@
-<h1>Edit a Contact</h1>
-
-<form action="/contacts/<%= @contact.id %>" method="post">
-  <input type="hidden" name="_method" value="put">
-  <input type="text" name="first_name" value="<%= @contact.first_name %>">
-  <input type="text" name="last_name" value="<%= @contact.last_name %>">
-  <input type="text" name="email" value="<%= @contact.email %>">
-  <input type="text" name="note" value="<%= @contact.note %>">
-  <input type="submit" name="Submit">
+<div class="page-header">
+  </div>
+  <fieldset>
+    <legend>Modify Contact</legend>
+    <div class="well" id="contact-well">
+      <form class="form-horizontal" role="form" action="/contacts/<%= @contact.id %>" method="POST">
+      <input type="hidden" name="_method" value="put">
+        <div class="form-group">
+        <label for="first_name" class="col-sm-2 control-label">First Name:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="first_name" name="first_name" value="<%= @contact.first_name %>"></input>
+        </div>
+    		</div>
+    		<div class="form-group">
+        <label for="last_name" class="col-sm-2 control-label">Last Name:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="last_name" name="last_name" value="<%= @contact.last_name %>"></input>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="email" class="col-sm-2 control-label">E-Mail:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="email" maxlength="30" name="email" value="<%= @contact.email %>"></input>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="note" class="col-sm-2 control-label">Notes:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="email" maxlength="30" name="note" value="<%= @contact.note %>">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="submit" class="col-sm-2 control-label"></label>
+        <div class="col-sm-2">
+            <input type="submit" class="form-control" id="submit" placeholder="Submit" maxlength="30"></input>
+        </div>
+    </div>
+    </fieldset>
 </form>
+</div>
