--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,29 +28,25 @@
 		      	<li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contacts <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
-		          	<li><a href="/contacts/search">Search</a></li>
-		            <li class="divider"></li>
 		            <li><a href="/contacts/new">Add</a></li>
-		            <li><a href="/contacts/delete">Delete</a></li>
-		            <li><a href="/contacts/modify">Modify</a></li>
-		            <li class="divider"></li>
 		            <li><a href="/contacts">Display All</a></li>
 		          </ul>
 		        </li>
 		        <li class="dropdown">
 		          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Inventory <span class="caret"></span></a>
 		          <ul class="dropdown-menu" role="menu">
-		          	<li><a href="/inventory/search">Search</a></li>
-		            <li class="divider"></li>
 		            <li><a href="/inventory/new">Add</a></li>
-		            <li><a href="/inventory/delete">Delete</a></li>
-		            <li><a href="/inventory/modify">Modify</a></li>
-		            <li class="divider"></li>
 		            <li><a href="/inventory">Display All</a></li>
 		          </ul>
 		        </li>
 
-				  	<li><a href="/contacts/help">Help</a></li>	      
+				  	<li><a href="/contacts/help">Help</a></li>
+				  	<form class="navbar-form navbar-left" role="search">
+        			<div class="form-group">
+          			<input type="text" class="form-control" placeholder="Search">
+        			</div>
+        			<button type="submit" class="btn btn-default">Submit</button>
+      			</form>      
 				  	</ul>
 		      
 		    </div><!-- /.navbar-collapse -->
