--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -1,7 +1,9 @@
-<h1><%= @contact.first_name %> <%= @contact.last_name %></h1>
-<p><strong>Email:</strong> <%= @contact.email %></p>
-<p><strong>Note:</strong></p>
-<p><%= @contact.note %></p>
+<p>
+		First Name:<%= contact.first_name %><br> 
+    Last Name: <%= contact.last_name %><br>
+   	Email: <%= contact.email %><br>
+	 	Notes: <%= contact.note %> 
+<p>
 
 <form action="/contacts/<%= @contact.id %>" method="post">
   <input type="hidden" name="_method" value="delete">
