--- a/views/layout.erb
+++ b/views/layout.erb
@@ -19,7 +19,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-				  <a class="navbar-brand" href="../">myCRM</a>
+				  <a class="navbar-brand" href="/index">myCRM</a>
 		    </div>
 
 		    <!-- Collect the nav links, forms, and other content for toggling -->
