fixed contacts styling issue

--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -1,4 +1,4 @@
-<h1>All Contacts</h1>
+<legend>myCRM Contacts</legend>
 <div class="well" id="contact-well">
   <ul>
   	<% @contacts.each do |contact| %>
@@ -6,12 +6,10 @@
     			Last Name: <%= contact.last_name %><br>
   		   	Email: <%= contact.email %><br>
   			 	Notes: <%= contact.note %> </p>
-  			 	<div id="main">
     		<a class="btn btn-default" href="/contacts/<%= contact.id %>/edit">Edit</a> 
     		<form action="/contacts/ <%= contact.id %>" method="post" id="delete-contact-form">
     		<input name="_method" type="hidden" value="delete" />
     		<input class="btn btn-default" type="submit" value="Delete"/><p>
-    		</div>
     	</form>
     	</ul>
     	</li><hr>
@@ -19,9 +17,3 @@
   </ul>
 </div>
 
-<style type="text/css">
-    #main
-    {
-     display: inline;
-    }
-</style>
