--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -9,17 +9,47 @@
         <div class="col-sm-2">
             <input type="text" class="form-control" id="first_name" placeholder="First Name" name="first_name"></input>
         </div>
-    		</div>
-    		<div class="form-group">
+            </div>
+            <div class="form-group">
         <label for="last_name" class="col-sm-2 control-label">Last Name:</label>
         <div class="col-sm-2">
             <input type="text" class="form-control" id="last_name" placeholder="Last Name" name="last_name"></input>
+        </div>
+    </div>
+     <div class="form-group">
+        <label for="phone_number" class="col-sm-2 control-label">Phone Number:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="phone_number" placeholder="Ex. 123-456-7890" maxlength="30" name="phone_number"></input>
         </div>
     </div>
     <div class="form-group">
         <label for="email" class="col-sm-2 control-label">E-Mail:</label>
         <div class="col-sm-2">
             <input type="text" class="form-control" id="email" placeholder="E-Mail" maxlength="30" name="email"></input>
+        </div>
+    </div>
+     <div class="form-group">
+        <label for="street_address" class="col-sm-2 control-label">Street Address:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="street_address" placeholder="Ex. 1 Yonge Street" maxlength="30" name="street_address"></input>
+        </div>
+    </div>
+     <div class="form-group">
+        <label for="city" class="col-sm-2 control-label">City:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="phone_number" placeholder="City" maxlength="30" name="city"></input>
+        </div>
+    </div>
+     <div class="form-group">
+        <label for="state" class="col-sm-2 control-label">Province/State:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="state" placeholder="Province/State" maxlength="30" name="state"></input>
+        </div>
+    </div>
+     <div class="form-group">
+        <label for="country" class="col-sm-2 control-label">Country:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="country" placeholder="Country" maxlength="30" name="country"></input>
         </div>
     </div>
     <div class="form-group">
