updated more functionality relating to user input fields

--- a/views/edit_contact.erb
+++ b/views/edit_contact.erb
@@ -17,10 +17,42 @@
             <input type="text" class="form-control" id="last_name" name="last_name" value="<%= @contact.last_name %>"></input>
         </div>
     </div>
+      <div class="form-group">
+        <label for="phone_number" class="col-sm-2 control-label">Phone Number:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="phone_number" maxlength="30" name="phone_number" value="<%= @contact.phone_number %>"></input>
+        </div>
+    </div>
     <div class="form-group">
         <label for="email" class="col-sm-2 control-label">E-Mail:</label>
         <div class="col-sm-2">
             <input type="text" class="form-control" id="email" maxlength="30" name="email" value="<%= @contact.email %>"></input>
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="street_address" class="col-sm-2 control-label">Street Address:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="street_address" maxlength="30" name="street_address" value="<%= @contact.street_address %>"></input>
+        </div>
+    </div><div class="form-group">
+        <label for="city" class="col-sm-2 control-label">City:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="city" maxlength="30" name="city" value="<%= @contact.city %>"></input>
+        </div>
+    </div><div class="form-group">
+        <label for="state" class="col-sm-2 control-label">Province\State:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="state" maxlength="30" name="state" value="<%= @contact.state %>"></input>
+        </div>
+    </div><div class="form-group">
+        <label for="postal_code" class="col-sm-2 control-label">Postal Code:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="postal_code" maxlength="30" name="postal_code" value="<%= @contact.postal_code %>"></input>
+        </div>
+    </div><div class="form-group">
+        <label for="country" class="col-sm-2 control-label">Country:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="country" maxlength="30" name="country" value="<%= @contact.country %>"></input>
         </div>
     </div>
     <div class="form-group">
