--- a/views/new_contact.erb
+++ b/views/new_contact.erb
@@ -46,6 +46,13 @@
             <input type="text" class="form-control" id="state" placeholder="Province/State" maxlength="30" name="state"></input>
         </div>
     </div>
+    <div class="form-group">
+        <label for="postal_code" class="col-sm-2 control-label">Zip/Postal Code:</label>
+        <div class="col-sm-2">
+            <input type="text" class="form-control" id="state" placeholder="Zip/Postal" maxlength="30" name="postal_code"></input>
+        </div>
+    </div>
+
      <div class="form-group">
         <label for="country" class="col-sm-2 control-label">Country:</label>
         <div class="col-sm-2">
