--- a/views/show_contact.erb
+++ b/views/show_contact.erb
@@ -4,6 +4,7 @@
    Email: <%= contact.email %><br>
    Street Address: <%= contact.street_address %><br>
    City: <%= contact.email %> Province\State: <%= contact.state %><br>
+   Zip\Postal Code: <%= contact.postal_code %><br>
    Country: <%= contact.country %><br>
 	 Notes: <%= contact.note %> 
 </p>
