--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,10 +40,10 @@
 		          </ul>
 		        </li>
 
-				  	<li><a href="/contacts/help">Help</a></li>
+				  	<li><a href="/help">Help</a></li>
 				  	<form class="navbar-form navbar-left" role="search">
         			<div class="form-group">
-          			<input type="text" class="form-control" placeholder="Search">
+          			<input type="text" class="form-control" placeholder="Contacts, Inventory">
         			</div>
         			<button type="submit" class="btn btn-default">Submit</button>
       			</form>      
