added more inventory views

--- a/views/new_inventory.erb
+++ b/views/new_inventory.erb
@@ -49,7 +49,7 @@
     <div class="form-group">
         <label for="item_note" class="col-sm-2 control-label">Notes:</label>
         <div class="col-sm-2">
-            <input type="text" class="form-control" id="state" maxlength="300" name="postal_code"></input>
+            <input type="text" class="form-control" id="state" maxlength="300" name="item_note"></input>
         </div>
     </div>
     <div class="form-group">
