added search feature, fixed styling issues, cleaned up some code

--- a/views/edit_contact.erb
+++ b/views/edit_contact.erb
@@ -3,7 +3,7 @@
   <fieldset>
     <legend>Modify Contact</legend>
     <div class="well" id="contact-well">
-      <form class="form-horizontal" role="form" action="/contacts/<%= @contact.id %>" method="POST">
+      <form class="form-horizontal" role="form" action="/contacts/<%= @contact.id %>/edit" method="POST">
       <input type="hidden" name="_method" value="put">
         <div class="form-group">
         <label for="first_name" class="col-sm-2 control-label">First Name:</label>
