--- a/views/contacts.erb
+++ b/views/contacts.erb
@@ -2,22 +2,25 @@
 <div class="well" id="contact-well">
   <ul>
   	<% @contacts.each do |contact| %>
-    	<p>First Name: <%= contact.first_name %><br> 
-    		 Last Name: <%= contact.last_name %><br>
-  		   Telephone: <%= contact.phone_number %><br>
-  		   Email: <%= contact.email %><br>
-  		   Street Address: <%= contact.street_address %><br>
-  		   City: <%= contact.email %> Province\State: <%= contact.state %><br>
-  		   Zip\Postal Code: <%= contact.postal_code %><br>
-  		   Country: <%= contact.country %><br>
-  			 Notes: <%= contact.note %> </p>
-    		<a class="btn btn-default" href="/contacts/<%= contact.id %>/edit">Edit</a> 
-    		<form action="/contacts/ <%= contact.id %>" method="post" id="delete-contact-form">
-    		<input name="_method" type="hidden" value="delete"/>
-    		<input class="btn btn-default" type="submit" value="Delete"/><p>
-    	</form>
-    	</ul>
-    	</li><hr>
+  		<li>
+	    	<p>First Name: <%= contact.first_name %><br> 
+	    		 Last Name: <%= contact.last_name %><br>
+	  		   Telephone: <%= contact.phone_number %><br>
+	  		   Email: <%= contact.email %><br>
+	  		   Street Address: <%= contact.street_address %><br>
+	  		   City: <%= contact.email %> Province\State: <%= contact.state %><br>
+	  		   Zip\Postal Code: <%= contact.postal_code %><br>
+	  		   Country: <%= contact.country %><br>
+	  			 Notes: <%= contact.note %> 
+	  		</p>
+	  		<p>
+    			<form action="/contacts/ <%= contact.id %>" method="post" id="delete-contact-form">
+    				<input name="_method" type="hidden" value="delete"/>
+	    			<a class="btn btn-default" href="/contacts/<%= contact.id %>/edit">Edit</a> 
+    				<input class="btn btn-default" type="submit" value="Delete"/>
+  				</form>
+	    	<p>
+    	</li>
   	<% end %>
   </ul>
 </div>
