updated styling on index and layout, updated help link in crm and view

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,10 @@
-<body>
-Welcome to myCRM. The Customer Relationship Manager.
-
-Please use the Navigation Bar above to perform an operation.
-</body>
+<legend>Welcome to myCRM</legend>
+<div class="well" id="index">
+  <ul>
+      <p>		Please select an option from the navigation bar above. 
+      	<br>
+      	<br>
+      			When using the search, please remember to select a search filter from the dropdown menu!
+      </p>
+  </ul>
+</div>
